<resources>
    <string name="app_name">SpaceDIM</string>
    <string name="dim_space_team">DIM Space Team</string>
    <string name="subtitleHomePage">I\'m a famous Astronaut</string>
    <string name="launchHomePage">LAUNCH</string>
    <string name="newHomePage">I\'m new to Space Program</string>
    <string name="registerHomePage">REGISTER AN ASTRONAUTE PROFILE</string>
    <string name="titleWaiting">Enter a room name to join or create a game ...</string>
    <string name="joingameWaiting">JOIN A GAME ROOM</string>
    <string name="socketWaiting">Socket inactive</string>
    <string name="noroomWaiting">No Room Joined</string>
    <string name="positionGame">You are currently in traveling in the Galaxy 1</string>
    <string name="informationGame">Il y a trop de gaz !</string>
    <string name="loseEnd">You lose, What a miss !</string>
    <string name="scoreEnd">Your score for this game was : 220</string>
    <string name="moreEnd">You reap what you show</string>
    <string name="retry_loser">Retry (LOSER)</string>
    <string name="high_scores">HIGH SCORES</string>
    <string name="nextDebug">NEXT PAGE (DEBUG)</string>
</resources>