<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:background="@color/purple_lessdark">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/spaceteam_foreground" />

    <TextView
        android:id="@+id/titleWaiting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleWaiting"
        android:textSize="25sp"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="-70dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="?android:attr/listChoiceIndicatorSingle" />

        <TextView
            android:id="@+id/textWaiting"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingTop="5dp"
            android:text="@string/socketWaiting"
            android:textColor="@color/white" />
    </LinearLayout>


    <Button
            android:id="@+id/startButtonWaiting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple_lesslight"
            android:text="@string/joingameWaiting"
            android:layout_marginTop="30dp"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:padding="5dp"/>

    <TextView
        android:id="@+id/emptyWaiting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/noroomWaiting"
        android:textColor="@color/white"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"/>


</LinearLayout>